<resources>
    <string name="app_name">1_HelloWorld</string>
    <string name="heading">Services In Android</string>
    <string name="startButtonText">Start the Service</string>
    <string name="stopButtonText">Stop the Service</string>

    <string name="hintText">Enter User Name</string>
    <string name="heading2">Content Provider In Android</string>
    <string name="insertButtonText">Insert Data</string>
    <string name="loadButtonText">Load Data</string>

</resources>